# Code-Gym-LLM-Project

./: JustFile  README.md  hello.py  index.html  pyproject.toml  rough.py
backend/: config.toml  config.yaml  js_submission_processor.py  js_test.py  main.py  submission_processor.py  test_submission_function.py
backend/docker/js_tester/: Dockerfile
backend/docker/tester/: Dockerfile  test_runner.py
backend/mlruns/0/: meta.yaml
backend/mlruns/0/22dead7701b946509807dd8aca1b80e0/: meta.yaml
backend/mlruns/0/5f89e7864ab542c388a5deaa5f165a66/: meta.yaml
backend/mlruns/0/9f7e438158aa49e1a028963ce78d8805/: meta.yaml
backend/mlruns/0/accae9799a9e441ba25f23866e1deeec/: meta.yaml
backend/services/: llm_error.py  llm_hint.py  llm_review.py  llm_scaffold.py  llm_testcases.py  pydantic_models.py  query_llm.py
backend/submissions/submission_0d222cb1-a2b4-4449-a9f7-2056f5d849dc/code/: solution.py
backend/submissions/submission_0d222cb1-a2b4-4449-a9f7-2056f5d849dc/results/: results.json
backend/submissions/submission_3678a031-1c33-4c35-88d3-43fe99246b3d/results/: results.json
backend/submissions/submission_3678a031-1c33-4c35-88d3-43fe99246b3d/tests/: test_hidden_1.py  test_visible_1.py
frontend/: editor.html  home.html  questions.html  topics.html
frontend/css/: editor.css  home.css  questions.css  topics.css
frontend/js/: editor.js  home.js  questions.js  topics.js
mlruns/0/: meta.yaml
project-docs/: mkdocs.yml
project-docs/docs/: architecture.md  functionality.md  index.md  learnings.md  project_run.md
(+50 files in other folders)
