[project]
name = "code-gym-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docker>=7.1.0",
    "fastapi[standard]>=0.115.12",
    "mlflow>=2.21.3",
    "ollama>=0.4.7",
    "prefect>=3.3.4",
    "pyyaml>=6.0.2",
    "toml>=0.10.2",
]
