[project]
name = "code-gym-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docker>=7.1.0",
    "fastapi[standard]>=0.115.12",
    "mkdocs-material>=9.6.12",
    "mlflow>=2.21.3",
    "ollama>=0.4.7",
    "prefect>=3.3.4",
    "pytest>=8.3.5",
    "pyyaml>=6.0.2",
    "ruff>=0.11.6",
    "toml>=0.10.2",
]

[tool.ruff]
select = ["ALL"] 
